--- a/deployment/kubernetes-manifests/quickstart-k8s/charts/nacos/values.yaml
+++ b/deployment/kubernetes-manifests/quickstart-k8s/charts/nacos/values.yaml
@@ -22,7 +22,7 @@ nacos:
     name: "nacos"
     host: "nacos-mysql-leader"
     username: "nacos"
-    passowrd: "zhaoyiming.18"
+    passowrd: "Abc123%"
     port: "3306"
   headlessService: "nacos-headless"
 service:
