--- a/ts-assurance-service/src/main/resources/application.yml
+++ b/ts-assurance-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${ASSURANCE_MYSQL_HOST:ts-assurance-mysql}:${ASSURANCE_MYSQL_PORT:3306}/${ASSURANCE_MYSQL_DATABASE:ts}?allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
     username: ${ASSURANCE_MYSQL_USER:root}
-    password: ${ASSURANCE_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${ASSURANCE_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
