--- a/ts-config-service/src/main/resources/application.yml
+++ b/ts-config-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${CONFIG_MYSQL_HOST:ts-config-mysql}:${CONFIG_MYSQL_PORT:3306}/${CONFIG_MYSQL_DATABASE:ts}?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true
     username: ${CONFIG_MYSQL_USER:root}
-    password: ${CONFIG_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${CONFIG_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
