--- a/ts-consign-price-service/src/main/resources/application.yml
+++ b/ts-consign-price-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${CONSIGN_PRICE_MYSQL_HOST:ts-consign-price-mysql}:${CONSIGN_PRICE_MYSQL_PORT:3306}/${CONSIGN_PRICE_MYSQL_DATABASE:ts}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${CONSIGN_PRICE_MYSQL_USER:root}
-    password: ${CONSIGN_PRICE_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${CONSIGN_PRICE_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
