--- a/ts-consign-service/src/main/resources/application.yml
+++ b/ts-consign-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${CONSIGN_MYSQL_HOST:ts-consign-mysql}:${CONSIGN_MYSQL_PORT:3306}/${CONSIGN_MYSQL_DATABASE:ts}?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
     username: ${CONSIGN_MYSQL_USER:root}
-    password: ${CONSIGN_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${CONSIGN_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
