--- a/ts-contacts-service/src/main/resources/application.yml
+++ b/ts-contacts-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${CONTACTS_MYSQL_HOST:ts-price-mysql}:${CONTACTS_MYSQL_PORT:3306}/${CONTACTS_MYSQL_DATABASE:ts}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${CONTACTS_MYSQL_USER:root}
-    password: ${CONTACTS_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${CONTACTS_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
