--- a/ts-delivery-service/src/main/resources/application.yml
+++ b/ts-delivery-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     url: jdbc:mysql://${DELIVERY_MYSQL_HOST:ts-delivery-mysql}:${DELIVERY_MYSQL_PORT:3306}/${DELIVERY_MYSQL_DATABASE:ts-delivery-mysql}?useSSL=false
     username: ${DELIVERY_MYSQL_USER:root}
-    password: ${DELIVERY_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${DELIVERY_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   rabbitmq:
     host: ${rabbitmq_host:localhost}
