--- a/ts-food-service/src/main/resources/application.yml
+++ b/ts-food-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://${FOOD_MYSQL_HOST:ts-food-mysql}:${FOOD_MYSQL_PORT:3306}/${FOOD_MYSQL_DATABASE:ts-food-mysql}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${FOOD_MYSQL_USER:root}
-    password: ${FOOD_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${FOOD_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
