--- a/ts-order-service-02/src/main/resources/application.yml
+++ b/ts-order-service-02/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: jdbc:mysql://${ORDER_MYSQL_HOST}:${ORDER_MYSQL_PORT:3306}/${ORDER_MYSQL_DATABASE:ts}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${ORDER_MYSQL_USER:root}
-    password: ${ORDER_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${ORDER_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
