--- a/ts-payment-service/src/main/resources/application.yml
+++ b/ts-payment-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: jdbc:mysql://${PAYMENT_MYSQL_HOST:ts-payment-mysql}:${PAYMENT_MYSQL_PORT:3306}/${PAYMENT_MYSQL_DATABASE:ts}?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: ${PAYMENT_MYSQL_USER:root}
-    password: ${PAYMENT_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${PAYMENT_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
