--- a/ts-route-service/src/main/resources/application.yml
+++ b/ts-route-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${ROUTE_MYSQL_HOST}:${ROUTE_MYSQL_PORT:3306}/${ROUTE_MYSQL_DATABASE:ts}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${ROUTE_MYSQL_USER:root}
-    password: ${ROUTE_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${ROUTE_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
