--- a/ts-security-service/src/main/resources/application.yml
+++ b/ts-security-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://${SECURITY_MYSQL_HOST:ts-security-mysql}:${SECURITY_MYSQL_PORT:3306}/${SECURITY_MYSQL_DATABASE:ts}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${SECURITY_MYSQL_USER:root}
-    password: ${SECURITY_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${SECURITY_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
