--- a/ts-station-food-service/src/main/resources/application.yml
+++ b/ts-station-food-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 #    url: jdbc:mysql://localhost:3306/ts-station-food-mysql?useSSL=false
     url: jdbc:mysql://${STATION_FOOD_MYSQL_HOST:10.176.122.1}:${STATION_FOOD_MYSQL_PORT:3306}/${STATION_FOOD_MYSQL_DATABASE:ts}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${STATION_FOOD_MYSQL_USER:root}
-    password: ${STATION_FOOD_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${STATION_FOOD_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
