--- a/ts-station-service/src/main/resources/application.yml
+++ b/ts-station-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${STATION_MYSQL_HOST:ts-price-mysql}:${STATION_MYSQL_PORT:3306}/${STATION_MYSQL_DATABASE:ts-price-mysql}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${STATION_MYSQL_USER:root}
-    password: ${STATION_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${STATION_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
