--- a/ts-train-food-service/src/main/resources/application.yml
+++ b/ts-train-food-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://${TRAIN_FOOD_MYSQL_HOST:ts-price-mysql}:${TRAIN_FOOD_MYSQL_PORT:3306}/${TRAIN_FOOD_MYSQL_DATABASE:ts-price-mysql}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${TRAIN_FOOD_MYSQL_USER:root}
-    password: ${TRAIN_FOOD_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${TRAIN_FOOD_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
