--- a/ts-train-service/src/main/resources/application.yml
+++ b/ts-train-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${TRAIN_MYSQL_HOST:ts-price-mysql}:${TRAIN_MYSQL_PORT:3306}/${TRAIN_MYSQL_DATABASE:ts}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${TRAIN_MYSQL_USER:root}
-    password: ${TRAIN_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${TRAIN_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
