--- a/ts-travel-service/src/main/resources/application.yml
+++ b/ts-travel-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: jdbc:mysql://${TRAVEL_MYSQL_HOST:ts-travel-mysql}:${TRAVEL_MYSQL_PORT:3306}/${TRAVEL_MYSQL_DATABASE:ts}?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: ${TRAVEL_MYSQL_USER:root}
-    password: ${TRAVEL_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${TRAVEL_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
