--- a/ts-travel2-service/src/main/resources/application.yml
+++ b/ts-travel2-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: jdbc:mysql://${TRAVEL2_MYSQL_HOST:ts-travel2-mysql}:${TRAVEL2_MYSQL_PORT:3306}/${TRAVEL2_MYSQL_DATABASE:ts}?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true
     username: ${TRAVEL2_MYSQL_USER:root}
-    password: ${TRAVEL2_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${TRAVEL2_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
