--- a/ts-user-service/src/main/resources/application.yaml
+++ b/ts-user-service/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://${USER_MYSQL_HOST:ts-user-mysql}:${USER_MYSQL_PORT:3306}/${USER_MYSQL_DATABASE:ts-user-mysql}?useSSL=false&allowPublicKeyRetrieval=true
     username: ${USER_MYSQL_USER:root}
-    password: ${USER_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${USER_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
