--- a/ts-wait-order-service/src/main/resources/application.yml
+++ b/ts-wait-order-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: jdbc:mysql://${WAIT_ORDER_MYSQL_HOST:10.176.122.1}:${WAIT_ORDER_MYSQL_PORT:3306}/${WAIT_ORDER_MYSQL_DATABASE:ts}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${WAIT_ORDER_MYSQL_USER:root}
-    password: ${WAIT_ORDER_MYSQL_PASSWORD:zhaoyiming.18}
+    password: ${WAIT_ORDER_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
