--- a/ts-config-service/src/main/resources/application.yml
+++ b/ts-config-service/src/main/resources/application.yml
@@ -17,6 +17,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://ts-discovery-service:8761/eureka/
+      preferIpAddress: true
 
 # HTTP Server
 server:
