add the coarse script for the train system, add the log wash script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - my-network
 
   ts-discovery-service:
-    image: ${NAMESPACE}/ts-discovery-service:${TAG}
+    image: yimingzha0/ts-discovery-service:0.4.1
     restart: always
     container_name: ts-discovery-service
     hostname: ts-discovery-service
@@ -31,7 +31,7 @@ services:
       - my-network
 
   ts-admin-basic-info-service:
-    image: ${NAMESPACE}/ts-admin-basic-info-service:${TAG}
+    image: yimingzha0/ts-admin-basic-info-service:0.4.1
     restart: always
     container_name: ts-admin-basic-info-service
     hostname: ts-admin-basic-info-service
@@ -51,7 +51,7 @@ services:
       - ts-price-mysql
 
   ts-notification-service:
-    image: ${NAMESPACE}/ts-notification-service:${TAG}
+    image: yimingzha0/ts-notification-service:0.4.1
     restart: always
     container_name: ts-notification-service
     hostname: ts-notification-service
@@ -73,7 +73,7 @@ services:
       - rabbitmq
 
   ts-inside-payment-service:
-    image: ${NAMESPACE}/ts-inside-payment-service:${TAG}
+    image: yimingzha0/ts-inside-payment-service:0.4.1
     restart: always
     container_name: ts-inside-payment-service
     hostname: ts-inside-payment-service
@@ -93,7 +93,7 @@ services:
       - ts-price-mysql
 
   ts-food-service:
-    image: ${NAMESPACE}/ts-food-service:${TAG}
+    image: yimingzha0/ts-food-service:0.4.1
     restart: always
     container_name: ts-food-service
     hostname: ts-food-service
@@ -115,7 +115,7 @@ services:
       - rabbitmq
 
   ts-wait-order-service:
-    image: ${NAMESPACE}/ts-wait-order-service:${TAG}
+    image: yimingzha0/ts-wait-order-service:0.4.1
     restart: always
     container_name: ts-wait-order-service
     hostname: ts-wait-order-service
@@ -135,7 +135,7 @@ services:
       - ts-price-mysql
 
   ts-travel-service:
-    image: ${NAMESPACE}/ts-travel-service:${TAG}
+    image: yimingzha0/ts-travel-service:0.4.1
     restart: always
     container_name: ts-travel-service
     hostname: ts-travel-service
@@ -155,7 +155,7 @@ services:
       - ts-discovery-service
 
   ts-train-service:
-    image: ${NAMESPACE}/ts-train-service:${TAG}
+    image: yimingzha0/ts-train-service:0.4.1
     restart: always
     ports:
       - 14567:14567
@@ -173,7 +173,7 @@ services:
       - ts-discovery-service
 
   ts-station-service:
-    image: ${NAMESPACE}/ts-station-service:${TAG}
+    image: yimingzha0/ts-station-service:0.4.1
     restart: always
     hostname: ts-station-service
     ports:
@@ -192,7 +192,7 @@ services:
       - ts-discovery-service
 
   ts-contacts-service:
-    image: ${NAMESPACE}/ts-contacts-service:${TAG}
+    image: yimingzha0/ts-contacts-service:0.4.1
     restart: always
     ports:
       - 12347:12347
@@ -210,7 +210,7 @@ services:
       - ts-discovery-service
 
   ts-assurance-service:
-    image: ${NAMESPACE}/ts-assurance-service:${TAG}
+    image: yimingzha0/ts-assurance-service:0.4.1
     hostname: ts-assurance-service
     restart: always
     ports:
